Added loading and displaying different categories of movie lists on the main screen.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,9 +4,10 @@
     <string name="search_hint">Введите название</string>
 
     <string name="main_title">Что будете смотреть\nсегодня?</string>
-    <string name="recommended">Рекомендуем</string>
+    <string name="now_playing">Смотрят сейчас</string>
     <string name="popular">Популярные</string>
-    <string name="upcoming">Новинки</string>
+    <string name="upcoming">Ожидаемые</string>
+    <string name="top_rated">Лучшие</string>
 
     <string name="home">Главная</string>
 
