Refactoring in some classes. Fixed a bug related to duplicate lists with movies on the main screen.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">Будь в курсе фильмов</string>
 
+    <string name="language">ru-RU</string>
+
     <string name="search_hint">Введите название</string>
 
     <string name="main_title">Что будете смотреть\nсегодня?</string>
