--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Будь в курсе фильмов</string>
 
     <string name="language">ru-RU</string>
-    <string name="release_date">Релиз:</string>
+    <string name="release_date">Год:</string>
 
     <string name="search_hint">Введите название</string>
 
