--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,10 @@
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="placeholder">Пёс Киноман</string>
+    <string name="full_hd">fullhd</string>
+    <string name="like">like</string>
+    <string name="watch">Смотреть</string>
+    <string name="year">Год:</string>
+    <string name="genre">Жанр:</string>
+    <string name="production_company">Студия:</string>
 </resources>
